--- a/index.html
+++ b/index.html
@@ -3,27 +3,105 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>사주팔자 간단풀이</title>
+  <title>사주팔자 보기 - 점신 스타일</title>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR&display=swap" rel="stylesheet" />
   <style>
-    body { font-family: sans-serif; padding: 2rem; max-width: 600px; margin: auto; }
-    label { display: block; margin-top: 1rem; }
-    #result { margin-top: 2rem; padding: 1rem; border: 1px solid #ddd; background: #f9f9f9; }
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Noto Serif KR', serif;
+      background: radial-gradient(#1a1a2e, #0f0f1a);
+      color: #f5f5dc;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 2rem;
+      color: #f1c40f;
+      text-shadow: 0 0 10px #f1c40f88;
+    }
+
+    .container {
+      background: #222;
+      border: 2px solid #f1c40f;
+      border-radius: 10px;
+      padding: 2rem;
+      width: 90%;
+      max-width: 500px;
+      box-shadow: 0 0 20px #f1c40f55;
+    }
+
+    label {
+      display: block;
+      margin: 1rem 0 0.5rem;
+      font-size: 1rem;
+    }
+
+    input {
+      width: 100%;
+      padding: 0.5rem;
+      font-size: 1rem;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+
+    button {
+      margin-top: 1.5rem;
+      width: 100%;
+      padding: 0.8rem;
+      background-color: #f1c40f;
+      border: none;
+      border-radius: 5px;
+      color: #000;
+      font-weight: bold;
+      font-size: 1.1rem;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    button:hover {
+      background-color: #e1b400;
+    }
+
+    #result {
+      margin-top: 2rem;
+      padding: 1.5rem;
+      border: 1px solid #f1c40f88;
+      background: #111;
+      border-radius: 10px;
+      color: #fff2cc;
+    }
+
+    .footer {
+      margin-top: 2rem;
+      font-size: 0.8rem;
+      color: #999;
+    }
   </style>
 </head>
 <body>
-  <h1>사주팔자 보기</h1>
+  <h1>사주팔자 간단풀이</h1>
 
-  <label>생년월일
+  <div class="container">
+    <label>생년월일</label>
     <input type="date" id="birthDate" />
-  </label>
-  
-  <label>시간 (예: 03:00)
-    <input type="time" id="birthTime" />
-  </label>
-  
-  <button onclick="showSaju()">사주 보기</button>
 
-  <div id="result"></div>
+    <label>시간 (예: 03:00)</label>
+    <input type="time" id="birthTime" />
+
+    <button onclick="showSaju()">사주 보기</button>
+
+    <div id="result"></div>
+  </div>
+
+  <div class="footer">
+    ⓒ 4zu8za | 참고: jeomsin.co.kr
+  </div>
 
   <script>
     const sajuData = {
@@ -42,9 +120,8 @@
     const heavenlyStems = ['갑', '을', '병', '정', '무', '기', '경', '신', '임', '계'];
     const earthlyBranches = ['자', '축', '인', '묘', '진', '사', '오', '미', '신', '유', '술', '해'];
 
-    // 매우 단순화된 간지 계산 함수 (예시용)
     function getGanjiByYear(year) {
-      const offset = year - 1984; // 1984는 갑자년
+      const offset = year - 1984; // 기준: 갑자년
       const stem = heavenlyStems[(offset % 10 + 10) % 10];
       const branch = earthlyBranches[(offset % 12 + 12) % 12];
       return stem + branch;
@@ -62,14 +139,12 @@
       const date = new Date(`${dateInput}T${timeInput}`);
       const year = date.getFullYear();
 
-      // 실제 구현에서는 월/일/시주도 계산해야 함 (여기선 예시로 임의 고정)
       const yearGanji = getGanjiByYear(year);
-      const monthGanji = "을사";
-      const dayGanji = "무인";
-      const hourGanji = "계축";
+      const monthGanji = "을사"; // 샘플용
+      const dayGanji = "무인";   // 샘플용
+      const hourGanji = "계축";  // 샘플용
 
       const key = `${yearGanji}-${monthGanji}-${dayGanji}-${hourGanji}`;
-
       const result = sajuData[key];
       const resultDiv = document.getElementById("result");
 
@@ -82,7 +157,7 @@
           <strong>용신:</strong> ${result.용신}
         `;
       } else {
-        resultDiv.innerHTML = "사주 데이터가 등록되어 있지 않습니다. (샘플만 존재)";
+        resultDiv.innerHTML = `사주 데이터가 등록되어 있지 않습니다. (${key})`;
       }
     }
   </script>
