--- a/index.html
+++ b/index.html
@@ -1,156 +1,109 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI 사주 추천</title>
-  <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>귀여운 사주팔자 보기</title>
   <style>
     body {
-      font-family: 'Gowun Dodum', sans-serif;
+      font-family: 'Arial', sans-serif;
       background-color: #fff8f0;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-height: 100vh;
+      color: #333;
+      padding: 2rem;
+      text-align: center;
     }
     h1 {
-      margin-top: 2rem;
-      font-size: 2rem;
-      color: #ff6f61;
+      color: #ff8a65;
     }
-    .container {
-      background: white;
+    form {
+      background-color: #ffe0b2;
+      padding: 1.5rem;
       border-radius: 12px;
-      padding: 2rem;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      max-width: 480px;
-      width: 100%;
-      margin-top: 1rem;
+      display: inline-block;
+      margin-bottom: 2rem;
     }
-    .input-row {
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 1rem;
+    label {
+      display: block;
+      margin: 0.5rem 0 0.2rem;
     }
-    .input-row select {
-      width: 23%;
+    input[type="datetime-local"] {
       padding: 0.5rem;
-      border-radius: 8px;
+      border-radius: 6px;
       border: 1px solid #ccc;
     }
     button {
-      background-color: #ffb347;
-      color: white;
+      margin-top: 1rem;
+      padding: 0.6rem 1.2rem;
+      background-color: #ffb74d;
       border: none;
       border-radius: 8px;
-      padding: 0.7rem 1.5rem;
-      font-size: 1rem;
       cursor: pointer;
-      margin-top: 1rem;
+      font-size: 1rem;
     }
-    .result {
+    #result {
       margin-top: 2rem;
-      font-size: 1.1rem;
-      line-height: 1.5;
-      color: #333;
-    }
-    .note {
-      font-size: 0.9rem;
-      color: #888;
-      margin-top: 0.5rem;
-    }
-    .similar-banner {
-      background-color: #ffe0cc;
-      padding: 0.5rem 1rem;
-      border-radius: 6px;
-      color: #d35400;
-      margin-bottom: 1rem;
-      font-weight: bold;
+      background-color: #fff3e0;
+      padding: 1.5rem;
+      border-radius: 12px;
     }
   </style>
 </head>
 <body>
-  <h1>✨ 나의 AI 사주 보기 ✨</h1>
-  <div class="container">
-    <div class="input-row">
-      <select id="year"></select>
-      <select id="month"></select>
-      <select id="day"></select>
-      <select id="time"></select>
-    </div>
-    <button onclick="findSaju()">사주 보기</button>
-    <div id="result"></div>
-  </div>
+  <h1>🧡 나의 사주팔자 보기 🧡</h1>
+  <form id="sajuForm">
+    <label for="birth">태어난 날짜와 시간을 입력하세요:</label>
+    <input type="datetime-local" id="birth" name="birth" required />
+    <br />
+    <button type="submit">사주 보기 🔮</button>
+  </form>
+
+  <div id="result"></div>
 
   <script>
-    const yearEl = document.getElementById("year");
-    const monthEl = document.getElementById("month");
-    const dayEl = document.getElementById("day");
-    const timeEl = document.getElementById("time");
-    const resultEl = document.getElementById("result");
-    let sajuData = [];
-
-    const stems = ["갑", "을", "병", "정", "무", "기", "경", "신", "임", "계"];
-    const branches = ["자", "축", "인", "묘", "진", "사", "오", "미", "신", "유", "술", "해"];
-
-    function fillSelect(el) {
-      for (let i = 0; i < stems.length; i++) {
-        for (let j = 0; j < branches.length; j++) {
-          const option = document.createElement("option");
-          option.value = stems[i] + branches[j];
-          option.text = stems[i] + branches[j];
-          el.appendChild(option);
-        }
-      }
+    async function fetchSajuData() {
+      const response = await fetch("data.json");
+      return await response.json();
     }
 
-    fillSelect(yearEl);
-    fillSelect(monthEl);
-    fillSelect(dayEl);
-    fillSelect(timeEl);
+    function getClosestSaju(data, birthKey) {
+      if (data[birthKey]) return data[birthKey];
 
-    async function loadData() {
-      const res = await fetch("data.json");
-      sajuData = await res.json();
-    }
-
-    function findSaju() {
-      const key = [yearEl.value, monthEl.value, dayEl.value, timeEl.value];
-      let match = sajuData.find(item => {
-        return JSON.stringify(item.key) === JSON.stringify(key);
+      // 가장 유사한 키 찾기 (년월일시 중 최대한 가까운 순으로 비교)
+      const keys = Object.keys(data);
+      const sorted = keys.sort((a, b) => {
+        return Math.abs(a.localeCompare(b));
       });
-
-      let similarNote = "";
-      if (!match) {
-        // 유사한 사주 찾기 (단순히 키 중 일치하는 개수로 유사도 판단)
-        let maxScore = -1;
-        let bestMatch = null;
-        for (const item of sajuData) {
-          let score = 0;
-          for (let i = 0; i < 4; i++) {
-            if (item.key[i] === key[i]) score++;
-          }
-          if (score > maxScore) {
-            maxScore = score;
-            bestMatch = item;
-          }
-        }
-        match = bestMatch;
-        if (match) {
-          similarNote = `<div class='similar-banner'>정확한 사주는 없지만 비슷한 사주를 찾아드렸어요 😊</div>`;
-        } else {
-          resultEl.innerHTML = "<p>죄송해요! 비슷한 사주도 찾을 수 없었어요 😢</p>";
-          return;
-        }
-      }
-
-      resultEl.innerHTML = `${similarNote}<div class='result'>${match.content}</div>`;
+      return data[sorted[0]];
     }
 
-    loadData();
+    document.getElementById("sajuForm").addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const birthInput = document.getElementById("birth").value;
+      if (!birthInput) return;
+
+      const date = new Date(birthInput);
+      const y = date.getFullYear();
+      const m = (date.getMonth() + 1).toString().padStart(2, '0');
+      const d = date.getDate().toString().padStart(2, '0');
+      const h = date.getHours().toString().padStart(2, '0');
+      const birthKey = `${y}-${m}-${d}-${h}`;
+
+      const sajuData = await fetchSajuData();
+      const result = getClosestSaju(sajuData, birthKey);
+
+      const resultDiv = document.getElementById("result");
+      if (result) {
+        resultDiv.innerHTML = `
+          <h2>🔮 사주 결과</h2>
+          <p><strong>사주:</strong> ${result.saju}</p>
+          <p><strong>설명:</strong> ${result.description}</p>
+          <p><strong>오행:</strong> ${result.elements}</p>
+          <p><strong>용신:</strong> ${result.yongsin}</p>
+        `;
+      } else {
+        resultDiv.innerHTML = `<p>죄송해요. 비슷한 사주도 찾을 수 없었어요 😢</p>`;
+      }
+    });
   </script>
 </body>
 </html>
