--- a/index.html
+++ b/index.html
@@ -2,112 +2,109 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>귀여운 사주 AI</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>귀여운 사주팔자 웹</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #fff5f0;
-      color: #333;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      font-family: 'Arial', sans-serif;
+      background-color: #fff7f0;
+      text-align: center;
       padding: 2rem;
+      color: #444;
     }
     h1 {
-      color: #ff6b81;
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
+      color: #f06292;
     }
-    .form {
-      background: #fff;
-      padding: 2rem;
-      border-radius: 1.5rem;
-      box-shadow: 0 10px 20px rgba(0,0,0,0.1);
-      max-width: 400px;
-      width: 100%;
-    }
-    label {
-      display: block;
-      margin-top: 1rem;
-      font-weight: bold;
-    }
-    input {
-      width: 100%;
-      padding: 0.6rem;
-      margin-top: 0.3rem;
-      border-radius: 0.5rem;
+    select, button {
+      padding: 0.5rem;
+      margin: 0.2rem;
       border: 1px solid #ccc;
-    }
-    button {
-      margin-top: 1.5rem;
-      padding: 0.8rem 1.2rem;
-      background-color: #ff6b81;
-      color: white;
-      border: none;
-      border-radius: 1rem;
+      border-radius: 0.5rem;
       font-size: 1rem;
-      cursor: pointer;
     }
     .result {
       margin-top: 2rem;
       padding: 1.5rem;
-      background: #fffbe0;
-      border: 2px dashed #ffb347;
+      background-color: #fff0f5;
       border-radius: 1rem;
-      max-width: 600px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
     }
   </style>
 </head>
 <body>
-  <h1>🐣 귀여운 사주 AI</h1>
-  <div class="form">
-    <label for="birth">생년월일시를 입력하세요</label>
-    <input type="text" id="birth" placeholder="예: 1994-03-28 14:00" />
-    <button onclick="getSaju()">운세 보기</button>
+  <h1>🧸 나의 사주팔자 보기</h1>
+  <p>생년월일시를 선택해주세요!</p>
+
+  <div>
+    <select id="year"></select> 년
+    <select id="month"></select> 월
+    <select id="day"></select> 일
+    <select id="hour"></select> 시
   </div>
 
-  <div class="result" id="result" style="display: none;">
+  <button onclick="getSaju()">🔮 사주 보기</button>
+
+  <div class="result" id="result">
     <h2>🔮 사주 결과</h2>
     <p><strong>사주:</strong> <span id="saju"></span></p>
     <p><strong>설명:</strong> <span id="description"></span></p>
     <p><strong>오행:</strong> <span id="element"></span></p>
-    <p><strong>용신:</strong> <span id="yongsin"></span></p>
+    <p><strong>용신:</strong> <span id="yongshin"></span></p>
   </div>
 
   <script>
+    const years = document.getElementById('year');
+    const months = document.getElementById('month');
+    const days = document.getElementById('day');
+    const hours = document.getElementById('hour');
+
+    for (let y = 1950; y <= 2025; y++) {
+      years.innerHTML += `<option value="${y}">${y}</option>`;
+    }
+    for (let m = 1; m <= 12; m++) {
+      months.innerHTML += `<option value="${m}">${m}</option>`;
+    }
+    for (let d = 1; d <= 31; d++) {
+      days.innerHTML += `<option value="${d}">${d}</option>`;
+    }
+    for (let h = 0; h < 24; h++) {
+      hours.innerHTML += `<option value="${h}">${h}시</option>`;
+    }
+
     async function getSaju() {
-      const birthInput = document.getElementById("birth").value;
-      if (!birthInput) return alert("생년월일시를 입력해주세요!");
+      const year = years.value;
+      const month = months.value;
+      const day = days.value;
+      const hour = hours.value;
 
-      const resultDiv = document.getElementById("result");
-      const sajuSpan = document.getElementById("saju");
-      const description = document.getElementById("description");
-      const element = document.getElementById("element");
-      const yongsin = document.getElementById("yongsin");
+      const response = await fetch('data.json');
+      const data = await response.json();
 
-      try {
-        const response = await fetch("data.json");
-        const data = await response.json();
+      const sajuKey = calculateSajuKey(year, month, day, hour);
+      const result = data[sajuKey];
 
-        // 🧠 여기에서 실제 사주 key를 구하는 부분은 대체로 서버나 AI API에서 처리
-        // 여기서는 간단히 랜덤 키 or 유사 키를 찾는 방식
-        const keys = Object.keys(data);
+      document.getElementById('saju').textContent = sajuKey || '알 수 없음';
 
-        // 테스트용: 입력 문자열 해시 기반 유사 키 선택
-        const hash = Array.from(birthInput).reduce((acc, ch) => acc + ch.charCodeAt(0), 0);
-        const idx = hash % keys.length;
-        const matchedKey = keys[idx];
-        const sajuData = data[matchedKey];
-
-        resultDiv.style.display = "block";
-        sajuSpan.textContent = matchedKey;
-        description.textContent = sajuData["설명"];
-        element.textContent = sajuData["오행"];
-        yongsin.textContent = sajuData["용신"];
-      } catch (err) {
-        alert("사주 데이터를 불러오는 데 실패했습니다.");
+      if (result) {
+        document.getElementById('description').textContent = result.설명;
+        document.getElementById('element').textContent = result.오행;
+        document.getElementById('yongshin').textContent = result.용신;
+      } else {
+        document.getElementById('description').textContent = '정확한 사주 결과가 없습니다. 비슷한 유형을 분석 중이에요!';
+        document.getElementById('element').textContent = '-';
+        document.getElementById('yongshin').textContent = '-';
       }
+    }
+
+    function calculateSajuKey(year, month, day, hour) {
+      // 간단한 예시 매핑: 실제 간지 변환 로직은 별도로 구현 필요
+      const stems = ['갑', '을', '병', '정', '무', '기', '경', '신', '임', '계'];
+      const branches = ['자', '축', '인', '묘', '진', '사', '오', '미', '신', '유', '술', '해'];
+      const y = stems[year % 10] + branches[year % 12];
+      const m = stems[month % 10] + branches[month % 12];
+      const d = stems[day % 10] + branches[day % 12];
+      const h = stems[hour % 10] + branches[hour % 12];
+      return `${y}-${m}-${d}-${h}`;
     }
   </script>
 </body>
