--- a/index.html
+++ b/index.html
@@ -849,5 +849,16 @@ ${personality.description}
         // 페이지 로드 시 데이터 로드
         window.addEventListener('load', loadSajuData);
     </script>
+
+    <hr>
+    <nav style="text-align:center; margin: 20px 0;">
+      <a href="/about.html">사이트 소개</a> |
+      <a href="/contents/saju-basics.html">사주란?</a> |
+      <a href="/contents/five-elements.html">오행 설명</a> |
+      <a href="/contents/zodiac-compatibility.html">궁합</a> |
+      <a href="/contents/saju-yearly.html">2025 운세</a> |
+      <a href="/privacy.html">개인정보 처리방침</a>
+    </nav>
+
 </body>
 </html>
