--- a/contents/five-elements.html
+++ b/contents/five-elements.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>오행 (목 · 화 · 토 · 금 · 수)</title>
+  <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
   <h1>오행이란?</h1>
