--- a/contents/saju-basics.html
+++ b/contents/saju-basics.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>사주란?</title>
+  <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
   <h1>사주란?</h1>
