--- a/privacy.html
+++ b/privacy.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>개인정보 처리방침</title>
+  <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
   <h1>개인정보 처리방침</h1>
