--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>사이트 소개</title>
+  <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
   <h1>사이트 소개</h1>
