--- a/contents/saju-yearly.html
+++ b/contents/saju-yearly.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>2025년 운세</title>
+  <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
   <h1>2025년 사주 흐름</h1>
