--- a/contents/zodiac-compatibility.html
+++ b/contents/zodiac-compatibility.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>띠별 궁합</title>
+  <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
   <h1>띠별 궁합</h1>
