apply container style

--- a/about.html
+++ b/about.html
@@ -6,10 +6,12 @@
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-  <h1>사이트 소개</h1>
-  <p>이 사이트는 생년월일과 출생 시간을 기반으로 사주를 간단하고 정확하게 확인할 수 있도록 만들어진 서비스입니다.</p>
-  <p>복잡한 명리학 지식이 없어도 누구나 쉽게 자신의 운세 흐름과 성향을 이해할 수 있도록 직관적인 UI로 구성했습니다.</p>
-  <p>앞으로 더 다양한 콘텐츠와 기능을 제공할 예정이며, 사용자에게 도움이 되는 정보를 지속적으로 업데이트하겠습니다.</p>
+  <div class="container">
+    <h1>사이트 소개</h1>
+    <p>이 사이트는 생년월일과 출생 시간을 기반으로 사주를 간단하고 정확하게 확인할 수 있도록 만들어진 서비스입니다.</p>
+    <p>복잡한 명리학 지식이 없어도 누구나 쉽게 자신의 운세 흐름과 성향을 이해할 수 있도록 직관적인 UI로 구성했습니다.</p>
+    <p>앞으로 더 다양한 콘텐츠와 기능을 제공할 예정이며, 사용자에게 도움이 되는 정보를 지속적으로 업데이트하겠습니다.</p>
+  </div>
 
   <hr>
   <a href="/">홈으로 돌아가기</a>
