--- a/contents/five-elements.html
+++ b/contents/five-elements.html
@@ -6,17 +6,19 @@
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-  <h1>오행이란?</h1>
-  <p>오행은 목(木), 화(火), 토(土), 금(金), 수(水) 다섯 가지 기운을 의미하며 세상의 모든 흐름을 설명하는 기본 원리입니다.</p>
-  <ul>
-    <li><b>목(木)</b>: 성장, 시작, 확장, 계획</li>
-    <li><b>화(火)</b>: 열정, 에너지, 활동, 인기</li>
-    <li><b>토(土)</b>: 안정, 신뢰, 중심, 균형</li>
-    <li><b>금(金)</b>: 냉철함, 판단, 결단, 논리</li>
-    <li><b>수(水)</b>: 지혜, 감성, 유연함, 창의성</li>
-  </ul>
-  <p>사주에서 오행의 균형은 매우 중요하며, 부족하거나 과한 기운이 어떤 영향을 주는지 파악하는 것이 핵심입니다.</p>
-
+  <div class="container">
+    <h1>오행이란?</h1>
+    <p>오행은 목(木), 화(火), 토(土), 금(金), 수(水) 다섯 가지 기운을 의미하며 세상의 모든 흐름을 설명하는 기본 원리입니다.</p>
+    <ul>
+        <li><b>목(木)</b>: 성장, 시작, 확장, 계획</li>
+        <li><b>화(火)</b>: 열정, 에너지, 활동, 인기</li>
+        <li><b>토(土)</b>: 안정, 신뢰, 중심, 균형</li>
+        <li><b>금(金)</b>: 냉철함, 판단, 결단, 논리</li>
+        <li><b>수(水)</b>: 지혜, 감성, 유연함, 창의성</li>
+    </ul>
+    <p>사주에서 오행의 균형은 매우 중요하며, 부족하거나 과한 기운이 어떤 영향을 주는지 파악하는 것이 핵심입니다.</p>
+  </div>
+  
   <hr>
   <a href="/">홈으로 돌아가기</a>
 </body>
