--- a/privacy.html
+++ b/privacy.html
@@ -6,10 +6,12 @@
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-  <h1>개인정보 처리방침</h1>
-  <p>본 서비스는 사용자의 개인정보를 수집하지 않으며, 입력된 생년월일 및 출생 시간 정보는 저장되지 않고 결과 계산에만 사용됩니다.</p>
-  <p>입력된 모든 정보는 브라우저 내부에서만 처리되며 서버로 전송되지 않습니다.</p>
-  <p>추후 서비스 개선을 위해 정책이 변경될 경우 본 페이지를 통해 공지하겠습니다.</p>
+  <div class="container">
+    <h1>개인정보 처리방침</h1>
+    <p>본 서비스는 사용자의 개인정보를 수집하지 않으며, 입력된 생년월일 및 출생 시간 정보는 저장되지 않고 결과 계산에만 사용됩니다.</p>
+    <p>입력된 모든 정보는 브라우저 내부에서만 처리되며 서버로 전송되지 않습니다.</p>
+    <p>추후 서비스 개선을 위해 정책이 변경될 경우 본 페이지를 통해 공지하겠습니다.</p>
+  </div>
 
   <hr>
   <a href="/">홈으로 돌아가기</a>
