--- a/contents/saju-yearly.html
+++ b/contents/saju-yearly.html
@@ -7,10 +7,14 @@
 </head>
 <body>
   <div class="container">
-    <h1>2025년 사주 흐름</h1>
-    <p>2025년은 나무(木)의 기운이 강해지는 해로, 성장과 확장, 변화, 도전의 흐름이 두드러지는 해입니다.</p>
-    <p>새로운 목표를 세우거나 배움을 시작하는 사람에게 좋은 해가 될 가능성이 높습니다.</p>
-    <p>관계운과 커리어운 모두 활발하지만, 무리한 확장보다는 균형을 유지하는 것이 중요합니다.</p>
+    <div class="header">
+        <h1>2025년 사주 흐름</h1>
+    </div>
+    </div class="content">
+        <p>2025년은 나무(木)의 기운이 강해지는 해로, 성장과 확장, 변화, 도전의 흐름이 두드러지는 해입니다.</p>
+        <p>새로운 목표를 세우거나 배움을 시작하는 사람에게 좋은 해가 될 가능성이 높습니다.</p>
+        <p>관계운과 커리어운 모두 활발하지만, 무리한 확장보다는 균형을 유지하는 것이 중요합니다.</p>
+    </div>
   </div>
 
   <hr>
