--- a/contents/zodiac-compatibility.html
+++ b/contents/zodiac-compatibility.html
@@ -7,10 +7,14 @@
 </head>
 <body>
   <div class="container">
-    <h1>띠별 궁합</h1>
-    <p>띠별 궁합은 상대방과의 성향 조화, 대화 방식, 감정 표현 등을 파악하는 데 도움이 됩니다.</p>
-    <p>궁합은 좋고 나쁨을 단정 짓기 위한 것이 아니라 서로를 이해하고 관계를 풍부하게 만드는 데 목적이 있습니다.</p>
-    <p>예를 들어, 불(火) 기운이 강한 사람은 물(水) 기운이 강한 사람과 함께할 때 균형이 맞춰지고 서로에게 긍정적인 영향을 줄 수 있습니다.</p>
+    <div class="header">
+        <h1>띠별 궁합</h1>
+    </div>
+    </div class="content">
+        <p>띠별 궁합은 상대방과의 성향 조화, 대화 방식, 감정 표현 등을 파악하는 데 도움이 됩니다.</p>
+        <p>궁합은 좋고 나쁨을 단정 짓기 위한 것이 아니라 서로를 이해하고 관계를 풍부하게 만드는 데 목적이 있습니다.</p>
+        <p>예를 들어, 불(火) 기운이 강한 사람은 물(水) 기운이 강한 사람과 함께할 때 균형이 맞춰지고 서로에게 긍정적인 영향을 줄 수 있습니다.</p>
+    </div>
   </div>
 
   <hr>
