--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
      crossorigin="anonymous"></script>
 </head>
 <body>
+      <!-- 상단 메뉴 -->
+    <nav>
+        <a href="#about">사이트 소개</a> |
+        <a href="#saju-basics">사주란?</a> |
+        <a href="#five-elements">오행 설명</a> |
+        <a href="#zodiac-compatibility">궁합</a> |
+        <a href="/privacy.html">개인정보 처리방침</a>
+    </nav>
+    
     <div class="container">
         <div class="header">
             <h1>🔮 사주 팔자</h1>
@@ -83,9 +92,9 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container" id="about">
         <div class="header">
-            <h1>사이트 소개</h1>
+            <h1>🏠 사이트 소개</h1>
         </div>
         <div class="content">
             <div class="text-section">
@@ -100,9 +109,9 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container" id="saju-basics">
         <div class="header">
-            <h1>사주란?</h1>
+            <h1>🔮 사주란?</h1>
         </div>
         <div class="content">
             <div class="text-section">
@@ -117,9 +126,9 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container" id="five-elements">
         <div class="header">
-            <h1>오행이란?</h1>
+            <h1>🌿 오행이란?</h1>
         </div>
         <div class="content">
             <div class="text-section">
@@ -137,9 +146,9 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container" id="zodiac-compatibility">
         <div class="header">
-            <h1>띠별 궁합</h1>
+            <h1>💞 띠별 궁합</h1>
         </div>
         <div class="content">
             <div class="text-section">
