Add class to navigation bar in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
       <!-- 상단 메뉴 -->
-    <nav>
+    <nav class="nav-bar">
         <a href="#about">사이트 소개</a> |
         <a href="#saju-basics">사주란?</a> |
         <a href="#five-elements">오행 설명</a> |
