--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="#five-elements">오행 설명</a> |
         <a href="#zodiac-compatibility">궁합</a> |
         <a href="/privacy.html">개인정보 처리방침</a>
+        <a href="/contact.html">문의 및 피드백</a>
     </nav>
     
     <div class="container">
